# LabelOps_v1

./: .env.example  gui.py  pyproject.toml
app/: __init__.py  address_ai.py  address_parser.py  clickdrop_xlsx.py  config.py  daemon.py  file_watcher.py  gui_main.py  logging_utils.py  manifest.py  pipeline.py  telegram_ingest_bot.py  version.py
assets/: ClickDrop_import_template_no_header.xlsx
config/: clients.local.yaml  clients.yaml
docs/: AI_ADDRESS_ASSIST.md  CONFIG.md  DAEMON_MODE.md  GUI_USAGE.md  LOCAL_TUTORIAL.md  LOGGING_AND_MANIFEST.md  OPS_HARDENING.md  RELEASE_BUILD.md  TELEGRAM_SETUP.md
scripts/: bootstrap_local.py  build.ps1  build.py  new_client.ps1  smoke_test.ps1
scripts/inno/: LabelOps.iss
